--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "@types/uikit": "^3.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
+    "uikit": "^3.6.22",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
